# aoc

./: .gitignore  README.md
2022/: go.work
2022/day_1/: go.mod  main.go
2022/day_2/: go.mod  main.go
2022/day_3/: go.mod  main.go
2023/: README.md
2023/day_1/: main.rs
2023/day_10/: README.md
2023/day_10/src/: main.rs
2023/day_11/: Package.swift
2023/day_11/Sources/: main.swift
2023/day_12/src/: main.rs
2023/day_13/: Package.swift  input_example_2.txt  input_example_3.txt  input_example_4.txt
2023/day_13/Sources/: main.swift
2023/day_14/src/: main.rs
2023/day_15/: Package.swift
2023/day_15/Sources/: main.swift
2023/day_16/: input_example_2.txt  input_example_9.txt
2023/day_16/src/: main.rs
2023/day_17/: Package.swift
2023/day_17/Sources/: main.swift
2023/day_2/src/: main.rs
2023/day_3/src/: main.rs
2023/day_4/src/: main.rs
2023/day_5/src/: main.rs
2023/day_6/src/: main.rs
2023/day_7/: Package.swift
2023/day_7/Sources/: main.swift
2023/day_8/src/: bst.rs  main.rs
2023/day_9/: Package.swift  input_example_2.txt  input_example_3.txt
2023/day_9/Sources/: main.swift
2024/: .gitignore
2024/day_1/: main.zig
2024/day_11/: CMakeLists.txt
2024/day_12/: CMakeLists.txt
2024/day_2/: \  main.zig
2024/day_3/: main.c  main.h
2024/day_4/: CMakeLists.txt  input_test.txt  main  main.c  main.h
2024/day_5/: CMakeLists.txt
2024/day_5/include/: array_list.h  main.h
2024/day_5/src/: array_list.c  main.c  map.c
2024/day_7/: CMakeLists.txt
2024/day_8/: .clang-format  CMakeLists.txt
2024/day_8/include/: main.h
2024/day_8/src/: main.c
2024/template/: CMakeLists.txt
2024/template/include/: main.h
2024/template/src/: main.c
2025/day_1/: main.c
2025/day_2/: main.c
2025/day_3/: main.c
2025/day_4/: main.c
2025/day_5/: main.c
2025/day_6/: main.c  tmp.py
2025/day_7/: main.c
(+46 files in other folders)
